# font-icons-scraper

./: Cargo.toml  README.md  install.sh  uninstall.sh
.github/workflows/: build.yml  rust-build.yml
src/: args.rs  lib.rs  main.rs
