[package]
name = "font-icons-scraper"
version = "0.1.0"
edition = "2021"
description = "A tool to extract SVG icons from font files used by popular icon font services."
authors = ["Dilshad <a-rustacean@outlook.com>"]

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
futures = "0.3.30"
lazy_static = "1.4.0"
regex = "1.10.4"
reqwest = "0.12.4"
tokio = { version = "1.38.0", features = ["full"] }
ttf-parser = "0.21.1"
url = "2.5.1"
