[package]
name = "font-icons-scraper"
version = "0.1.0"
edition = "2021"
description = "A tool to extract SVG icons from font files used by popular icon font services."
authors = ["Dilshad <a-rustacean@outlook.com>"]

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
futures = "0.3.30"
lazy_static = "1.5.0"
regex = "1.10.5"
reqwest = "0.12.5"
tokio = { version = "1.39.1", features = ["full"] }
ttf-parser = "0.24.0"
url = "2.5.2"
