[package]
name = "font-icons-scraper"
version = "0.1.0"
edition = "2021"
description = "A tool to extract SVG icons from font files used by popular icon font services."
authors = ["Dilshad <a-rustacean@outlook.com>"]

[dependencies]
clap = { version = "4.5.14", features = ["derive"] }
futures = "0.3.30"
lazy_static = "1.5.0"
regex = "1.10.6"
reqwest = "0.12.5"
tokio = { version = "1.39.2", features = ["full"] }
ttf-parser = "0.24.1"
url = "2.5.2"
